[gd_scene load_steps=23 format=3 uid="uid://b5pj0lanxu0o6"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_3q1kk"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ColourPicker/palette_control.gd" id="2_arvfv"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ColourPicker/PaletteList.gd" id="3_edpsv"]
[ext_resource type="PackedScene" uid="uid://wfo6boyk67m8" path="res://Scenes and Scripts/UI/ColourPicker/palette_list_item.tscn" id="4_t1lxn"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="5_7aaw2"]
[ext_resource type="Resource" uid="uid://i0gswa7oaher" path="res://saves/Palettes/teastain.tres" id="6_1gq2f"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="6_gw1gk"]
[ext_resource type="Texture2D" uid="uid://1qi6lr05g0vt" path="res://Textures/Buttons/icons/add.png" id="7_bfw4j"]
[ext_resource type="Resource" uid="uid://ovpgrpwbkp6q" path="res://saves/Palettes/Default/GameBoy.tres" id="7_gp7r5"]
[ext_resource type="PackedScene" uid="uid://7kmcsryae7lw" path="res://Scenes and Scripts/UI/Buttons/load_button.tscn" id="8_sg02h"]
[ext_resource type="Resource" uid="uid://ckctgd35yhnsn" path="res://saves/Palettes/Default/Mushroom.tres" id="8_tcy7h"]
[ext_resource type="StyleBox" uid="uid://bubm5sx3xn6q5" path="res://Resources/Themes/TitleLabel.tres" id="9_niodb"]
[ext_resource type="Texture2D" uid="uid://ci1qrp3pyqm6h" path="res://Textures/Buttons/icons/close.png" id="10_l6c52"]
[ext_resource type="Texture2D" uid="uid://cgfs1pdopjbh" path="res://Textures/Buttons/icons/close_hover.png" id="11_qnsjp"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes and Scripts/Components/button_sound_component.tscn" id="16_iciwe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rcifc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c01uu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0kbe6"]
resource_local_to_scene = true
shader = ExtResource("6_gw1gk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gghj8"]
resource_local_to_scene = true
shader = ExtResource("6_gw1gk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ksgaf"]
resource_local_to_scene = true
shader = ExtResource("6_gw1gk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qqec3"]
resource_local_to_scene = true
shader = ExtResource("6_gw1gk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ks3k"]
resource_local_to_scene = true
shader = ExtResource("6_gw1gk")

[node name="PaletteMenu" type="Control" node_paths=PackedStringArray("GrabAreas")]
material = ExtResource("1_3q1kk")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_arvfv")
GrabAreas = [NodePath("PaletteList/VBoxContainer/TitleContainer"), NodePath("PaletteList/VBoxContainer/PanelContainer")]

[node name="PaletteList" type="PanelContainer" parent="." node_paths=PackedStringArray("ItemContainer", "Title", "scroll_container")]
use_parent_material = true
custom_minimum_size = Vector2(225, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -87.0
offset_right = 112.5
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_rcifc")
script = ExtResource("3_edpsv")
Item = ExtResource("4_t1lxn")
ItemContainer = NodePath("VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ItemContainer")
Title = NodePath("VBoxContainer/TitleContainer/HBoxContainer/Title")
title = "Palettes"
scroll_container = NodePath("VBoxContainer/PanelContainer/MarginContainer/ScrollContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="PaletteList"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = -194

[node name="PanelContainer" type="PanelContainer" parent="PaletteList/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PaletteList/VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_right = -9

[node name="ScrollContainer" type="ScrollContainer" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer"]
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 159.999)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c01uu")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="ItemContainer" type="VBoxContainer" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="TeaStain" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ItemContainer" instance=ExtResource("4_t1lxn")]
material = SubResource("ShaderMaterial_0kbe6")
layout_mode = 2
palette = ExtResource("6_1gq2f")

[node name="GameBoy" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ItemContainer" instance=ExtResource("4_t1lxn")]
material = SubResource("ShaderMaterial_gghj8")
layout_mode = 2
palette = ExtResource("7_gp7r5")

[node name="Mushroom" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ItemContainer" instance=ExtResource("4_t1lxn")]
material = SubResource("ShaderMaterial_ksgaf")
layout_mode = 2
palette = ExtResource("8_tcy7h")

[node name="MarginContainer" type="MarginContainer" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="AddProblem" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("5_7aaw2")]
material = SubResource("ShaderMaterial_qqec3")
layout_mode = 2
size_flags_horizontal = 1
icon = ExtResource("7_bfw4j")
minimum_size = Vector2(70, 28)
icon_use_parent_material = true
action_mode = 1

[node name="LoadButton" parent="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("8_sg02h")]
material = SubResource("ShaderMaterial_7ks3k")
layout_mode = 2
minimum_size = Vector2(70, 28)

[node name="TitleContainer" type="PanelContainer" parent="PaletteList/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("9_niodb")

[node name="HBoxContainer" type="HBoxContainer" parent="PaletteList/VBoxContainer/TitleContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Close" type="TextureButton" parent="PaletteList/VBoxContainer/TitleContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(10, 14)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("10_l6c52")
texture_hover = ExtResource("11_qnsjp")
stretch_mode = 5

[node name="ButtonSoundComponent" parent="PaletteList/VBoxContainer/TitleContainer/HBoxContainer/Close" instance=ExtResource("16_iciwe")]
on_pressed = true

[node name="Title" type="Label" parent="PaletteList/VBoxContainer/TitleContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1
theme_override_font_sizes/font_size = 9
text = "Palettes"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/AddProblem" to="." method="_on_add_problem_pressed"]
[connection signal="submitted" from="PaletteList/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_submitted"]
[connection signal="pressed" from="PaletteList/VBoxContainer/TitleContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
